salesforce-port/force-app/main/default/objects/Subscription__c/fields/Plan__c.field-meta.xml
<CustomField>
    <fullName>Plan__c</fullName>
    <label>Plan</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Free</fullName><default>true</default><label>Free</label></value>
            <value><fullName>Collect</fullName><default>false</default><label>Collect</label></value>
            <value><fullName>Control</fullName><default>false</default><label>Control</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>