salesforce-port/force-app/main/default/objects/Subscription__c/fields/Seats__c.field-meta.xml
<CustomField>
    <fullName>Seats__c</fullName>
    <label>Seats</label>
    <type>Number</type>
    <precision>9</precision>
    <scale>0</scale>
</CustomField>